update. choose swager generated models as dto
