# api/swagger.yaml
@@ -19,31 +19,29 @@ paths:
       tags:
         - events
       consumes:
-      - application/json
+        - application/json
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Событие, которое надо зарегистрировать"
-        required: true
-        schema:
-          $ref: "#/definitions/SensorEvent"
+        - in: "body"
+          name: "body"
+          description: "Событие, которое надо зарегистрировать"
+          required: true
+          schema:
+            $ref: "#/definitions/SensorEvent"
       responses:
-        '201':
+        "201":
           description: Успех
-        '400':
+        "400":
           description: Тело запроса синтаксически невалидно
-        '415':
+        "415":
           description: Тело запроса в неподдерживаемом формате
-        '422':
+        "422":
           description: Тело запроса синтаксически валидно, но содержит невалидные данные
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
         default:
           description: Ошибка исполнения
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     options:
       summary: Получение доступных методов
       description: Возвращает в заголовке Allow список доступных методов
@@ -51,7 +49,7 @@ paths:
       tags:
         - events
       responses:
-        '204':
+        "204":
           description: Успех
           headers:
             Allow:
@@ -67,22 +65,20 @@ paths:
       tags:
         - sensors
       produces:
-      - application/json
+        - application/json
       responses:
-        '200':
+        "200":
           description: Успех
           schema:
             type: array
             items:
-              type: object
-              $ref: '#/definitions/Sensor'
-        '406':
+              $ref: "#/definitions/Sensor"
+        "406":
           description: Запрошен неподдерживаемый формат тела ответа
         default:
           description: Ошибка исполнения
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     head:
       summary: Запрос заголовков
       description: Возвращает заголовки ответа GET
@@ -90,15 +86,14 @@ paths:
       tags:
         - sensors
       responses:
-        '200':
+        "200":
           description: Успех
-        '406':
+        "406":
           description: Запрошен неподдерживаемый формат тела ответа
         default:
           description: Ошибка исполнения
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     post:
       summary: Регистрация датчика
       description: Регистрирует датчик в системе
@@ -106,34 +101,31 @@ paths:
       tags:
         - sensors
       consumes:
-      - application/json
+        - application/json
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Датчик, который надо зарегистрировать"
-        required: true
-        schema:
-          $ref: "#/definitions/SensorToCreate"
+        - in: "body"
+          name: "body"
+          description: "Датчик, который надо зарегистрировать"
+          required: true
+          schema:
+            $ref: "#/definitions/SensorToCreate"
       responses:
-        '200':
+        "200":
           description: Успех
           schema:
-            type: object
             $ref: "#/definitions/Sensor"
-        '400':
+        "400":
           description: Тело запроса синтаксически невалидно
-        '415':
+        "415":
           description: Тело запроса в неподдерживаемом формате
-        '422':
+        "422":
           description: Тело запроса синтаксически валидно, но содержит невалидные данные
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
         default:
           description: Ошибка исполнения
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     options:
       summary: Получение доступных методов
       description: Возвращает в заголовке Allow список доступных методов
@@ -141,7 +133,7 @@ paths:
       tags:
         - sensors
       responses:
-        '204':
+        "204":
           description: Успех
           headers:
             Allow:
@@ -157,52 +149,70 @@ paths:
       tags:
         - sensors
       produces:
-      - application/json
+        - application/json
+      parameters:
+        - name: "sensor_id"
+          in: "path"
+          description: "Идентификатор датчика"
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
-        '200':
+        "200":
           description: Успех
           schema:
-            type: object
-            $ref: '#/definitions/Sensor'
-        '404':
+            $ref: "#/definitions/Sensor"
+        "404":
           description: Датчик с указанным идентификатором не найден
-        '422':
+        "422":
           description: Идентификатор датчика не валиден
-        '406':
+        "406":
           description: Запрошен неподдерживаемый формат тела ответа
         default:
           description: Ошибка исполнения
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     head:
       summary: Запрос заголовков
       description: Возвращает заголовки ответа GET
       operationId: headSensor
       tags:
         - sensors
+      parameters:
+        - name: "sensor_id"
+          in: "path"
+          description: "Идентификатор датчика"
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
-        '200':
+        "200":
           description: Успех
-        '404':
+        "404":
           description: Датчик с указанным идентификатором не найден
-        '422':
+        "422":
           description: Идентификатор датчика не валиден
-        '406':
+        "406":
           description: Запрошен неподдерживаемый формат тела ответа
         default:
           description: Ошибка исполнения
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     options:
       summary: Получение доступных методов
       description: Возвращает в заголовке Allow список доступных методов
       operationId: sensorOptions
       tags:
         - sensors
+      parameters:
+        - name: "sensor_id"
+          in: "path"
+          description: "Идентификатор датчика"
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
-        '204':
+        "204":
           description: Успех
           headers:
             Allow:
@@ -218,34 +228,31 @@ paths:
       tags:
         - users
       consumes:
-      - application/json
+        - application/json
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Пользователь, которого надо зарегистрировать"
-        required: true
-        schema:
-          $ref: "#/definitions/UserToCreate"
+        - in: "body"
+          name: "body"
+          description: "Пользователь, которого надо зарегистрировать"
+          required: true
+          schema:
+            $ref: "#/definitions/UserToCreate"
       responses:
-        '200':
+        "200":
           description: Успех
           schema:
-            type: object
             $ref: "#/definitions/User"
-        '400':
+        "400":
           description: Тело запроса синтаксически невалидно
-        '415':
+        "415":
           description: Тело запроса в неподдерживаемом формате
-        '422':
+        "422":
           description: Тело запроса синтаксически валидно, но содержит невалидные данные
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
         default:
           description: Ошибка исполнения
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     options:
       summary: Получение доступных методов
       description: Возвращает в заголовке Allow список доступных методов
@@ -253,7 +260,7 @@ paths:
       tags:
         - users
       responses:
-        '204':
+        "204":
           description: Успех
           headers:
             Allow:
@@ -269,36 +276,33 @@ paths:
       tags:
         - users
       produces:
-      - application/json
+        - application/json
       parameters:
-      - name: "user_id"
-        in: "path"
-        description: "Идентификатор пользователя"
-        required: true
-        type: "integer"
-        format: "int64"
+        - name: "user_id"
+          in: "path"
+          description: "Идентификатор пользователя"
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
-        '200':
+        "200":
           description: Успех
           schema:
             type: array
             items:
-              type: object
-              $ref: '#/definitions/Sensor'
-        '404':
+              $ref: "#/definitions/Sensor"
+        "404":
           description: Нет пользователя с таким идентификатором
-        '406':
+        "406":
           description: Запрошен неподдерживаемый формат тела ответа
-        '422':
+        "422":
           description: Идентификатор пользователя не валиден
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
         default:
           description: Ошибка исполнения
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     head:
       summary: Запрос заголовков
       description: Возвращает заголовки ответа GET
@@ -306,29 +310,27 @@ paths:
       tags:
         - users
       parameters:
-      - name: "user_id"
-        in: "path"
-        description: "Идентификатор пользователя"
-        required: true
-        type: "integer"
-        format: "int64"
+        - name: "user_id"
+          in: "path"
+          description: "Идентификатор пользователя"
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
-        '200':
+        "200":
           description: Успех
-        '404':
+        "404":
           description: Нет пользователя с таким идентификатором
-        '406':
+        "406":
           description: Запрошен неподдерживаемый формат тела ответа
-        '422':
+        "422":
           description: Идентификатор пользователя не валиден
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
         default:
           description: Ошибка исполнения
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     post:
       summary: Привязка датчика к пользователю
       description: Связывает данного пользователя с указанным датчиком
@@ -336,41 +338,52 @@ paths:
       tags:
         - users
       consumes:
-      - application/json
+        - application/json
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Параметры привязки"
-        required: true
-        schema:
-          $ref: "#/definitions/SensorToUserBinding"
+        - name: "user_id"
+          in: "path"
+          description: "Идентификатор пользователя"
+          required: true
+          type: "integer"
+          format: "int64"
+        - in: "body"
+          name: "body"
+          description: "Параметры привязки"
+          required: true
+          schema:
+            $ref: "#/definitions/SensorToUserBinding"
       responses:
-        '201':
+        "201":
           description: Успех
-        '400':
+        "400":
           description: Тело запроса синтаксически невалидно
-        '404':
+        "404":
           description: Нет пользователя с таким идентификатором
-        '415':
+        "415":
           description: Тело запроса в неподдерживаемом формате
-        '422':
+        "422":
           description: Тело запроса синтаксически валидно, но содержит невалидные данные
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
         default:
           description: Ошибка исполнения
           schema:
-            type: object
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     options:
       summary: Получение доступных методов
       description: Возвращает в заголовке Allow список доступных методов
       operationId: usersSensorsOptions
       tags:
         - users
+      parameters:
+        - name: "user_id"
+          in: "path"
+          description: "Идентификатор пользователя"
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
-        '204':
+        "204":
           description: Успех
           headers:
             Allow:
@@ -444,8 +457,8 @@ definitions:
         type: string
         format: enum
         enum:
-        - cc
-        - adc
+          - cc
+          - adc
       current_state:
         description: Состояние датчика, соответствует значению в payload последнего обработанного события.
         type: integer
@@ -480,8 +493,8 @@ definitions:
       current_state: 1
       description: "Датчик температуры"
       is_active: true
-      registered_at: '2018-01-01T00:00:00Z'
-      last_activity: '2018-01-01T00:00:00Z'
+      registered_at: "2018-01-01T00:00:00Z"
+      last_activity: "2018-01-01T00:00:00Z"
   SensorToCreate:
     title: SensorToCreate
     description: Датчик умного дома, который надо создать
@@ -496,8 +509,8 @@ definitions:
         type: string
         format: enum
         enum:
-        - cc
-        - adc
+          - cc
+          - adc
       description:
         description: Описание
         type: string
@@ -542,8 +555,8 @@ definitions:
         type: integer
         format: int64
     required:
-    - sensor_serial_number
-    - payload
+      - sensor_serial_number
+      - payload
     example:
       sensor_serial_number: "1234567890"
       payload: 10
